--- a/Bejesusrey/pasatiemposV2/pagina1.html
+++ b/Bejesusrey/pasatiemposV2/pagina1.html
@@ -7,28 +7,18 @@
 </head>
 
 <body>
-
     <header>
         <h1>Ver Series</h1>
     </header>
-
     <main>
-        <article>
 
-            <section>
+        <header>
+            <h2>Series Animadas y Populares</h2>
+        </header>
 
-                <header>
-                    <h2>Series Animadas y Populares</h2>
-                </header>
+        <p>Desde que estaba en secundaria comence a ver diferentes generos en series porque cada una contaban diferentes historias</p>
+        <img width= "300" src="https://images.pexels.com/photos/2752777/pexels-photo-2752777.jpeg" alt="Ilustracion de Series">
 
-                <p></p>
-                <img src="" alt="">
-                <footer>
-                    <p></p>
-                </footer>
-            </section>
-
-        </article>
     </main>
 </body>
 </html>
