--- a/Bere-ops/Pasatiempos_Ver2/index.html
+++ b/Bere-ops/Pasatiempos_Ver2/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página 2.0</title>
+    <title>Mis pasatiempos 2.0</title>
 </head>
 <body>
     
