--- a/KingBootleg/PasatiemposVer2/musica.html
+++ b/KingBootleg/PasatiemposVer2/musica.html
@@ -6,8 +6,13 @@
     <title>Musica</title>
 </head>
 <body>
-    <ul>
-        
+
+            <p>Mis gustos de musica son variados aunque un poco peluciares a mi punto de vista</p>
+        <p>aqui algunos ejemplos</p>
+    <ul>    
+        <li><b>Musica de Videojuegos</b></li>
+        <li>Aqui un ejemplo</li>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/v55JHT66wvk?si=dBqLTIogtYmOasHC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </ul>
 </body>
 </html>
