agregar link de baile

--- a/Marikve7/pasatiempos2/pag1.html
+++ b/Marikve7/pasatiempos2/pag1.html
@@ -26,6 +26,15 @@
             </article>
         </section>
 
+        <section>
+            <header>
+                <h3>Bailes</h3>
+                <p>Estos son algunas de las canciones que me gusta bailar, aunque la verdad me gusta bailar 
+                    de todo tipo, solo que me voy más por este género. 
+                </p>
+                <button><a href="https://youtu.be/HK3LjI2InOg?si=Ch-Rx62l1vkpHbWd">J-hope "Killin it girl"</a></button>
+        </section>
+
 
     </main>
 
