--- a/IlseOjeda/index.html
+++ b/IlseOjeda/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es-mx">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,7 +23,20 @@
                 <li><a href="https://github.com/IlseOjeda/Practica-1/commits/main/">Commits</a></li>
             </ul>
         </section>
+        <h2>Evidencia 2</h2>
+        <p>En esta práctica realicé mi carpeta personal en la organización y dentro de la misma agregué un archivo llamado index.html.</p>
+    <section class="links">
+            <h2>Links solicitados</h2>
+            <ul>
+                <li><a href="https://github.com/FDW52AD2025/website52/blob/main/IlseOjeda/index.html">Página personal</a></li>
+                <li><a href="https://github.com/FDW52AD2025/website52/commits?author=IlseOjeda&since=2025-08-20&until=2025-08-22">Commits</a></li>
+            </ul>
+        </section>
     </main>
-    <footer></footer>
+    <footer>
+        <p>Realizado por Ilse Ojeda
+        <img src="logo.png" alt="Logo" class="logo-footer">
+        </p>
+    </footer>
 </body>
 </html>
