--- a/jesuscruz125/pasatiemposv2/pasatiempo1.html
+++ b/jesuscruz125/pasatiemposv2/pasatiempo1.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilosp3.css">
+    <meta name="keywords" content="NBA">
+    <link rel="stylesheet" href="estilosp2.css">
     <title>Actividades físicas</title>
 </head>
-<body>
+<body class="P1">
     <header>
         <h1>Deportes</h1>
     </header>
