Estructura basica de los pasatiempos

--- a/TheRafaMan06/pasatiemposver2/index.html
+++ b/TheRafaMan06/pasatiemposver2/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Bienvenido</h1>
+        <h1>Bienvenido a mis pasatiempos</h1>
     </header>
     
     <nav>
@@ -63,7 +63,7 @@
     </aside>
     
     <footer>
-        <p>&copy; 2025 Sitio Web - Todos los derechos reservados | Haz clic en cualquier categoría para más información</p>
+        <p>&copy; 2025 Sitio Web - Hecho por Abdiel Rafael Aguilar Linares</p>
     </footer>
 </body>
 </html>
