--- a/jesuscruz125/pasatiemposv2/index.html
+++ b/jesuscruz125/pasatiemposv2/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,8 @@
         <h1>Pasatiempos</h1>
     </header>
     <main>
-        <nav class="BarraNav">
+        <p>¡Bienvenido a mi espacio de pasatiempos! Aquí comparto mis actividades favoritas, desde aquellas que me permiten relajarme y disfrutar del tiempo libre, hasta las que desafían mi creatividad y habilidades. Cada sección está dedicada a un interés diferente, con información, imágenes y detalles que reflejan lo que más me apasiona. Espero que disfrutes explorando mis pasatiempos tanto como yo disfruto practicándolos.</p>
+        <nav class="barranav">
             <ol>
                 <li><a href="pasatiempo1.html">Deportes</a></li>
                 <li><a href="pasatiempo2.html">Música</a></li>
@@ -27,7 +28,7 @@
 
     </aside>
     <footer>
-
+        <p>&copy; Creado por Jesus Cruz. Todos los derechos reservados </p>
     </footer>
 </body>
 </html>
