--- a/jesuscruz125/pasatiemposv2/pasatiempo4.html
+++ b/jesuscruz125/pasatiemposv2/pasatiempo4.html
@@ -17,6 +17,9 @@
         <h2>Gravity Falls Diario 3</h2>
         <p class="">El Diario 3 es sumamente interesante. En él descubrimos qué sucedió con Stanford Pines y encontramos información detallada sobre los monstruos, además de páginas inéditas que nunca aparecieron en la serie. Es un libro que responde muchas incógnitas y que, para mí, es muy especial. Lo recomiendo absolutamente.</p>
         <img src="" alt="">
+        
+
+        <p>¡Muchas gracias por llegar hasta aquí! Sería genial que les dieras una oportunidad, así fomentamos la lectura y descubrimos nuevas historias juntos.</p>
     </main>
     <aside>
 
