--- a/jesuscruz125/pasatiemposv2/pasatiempo1.html
+++ b/jesuscruz125/pasatiemposv2/pasatiempo1.html
@@ -7,20 +7,33 @@
     <link rel="stylesheet" href="estilosp2.css">
     <title>Actividades físicas</title>
 </head>
-<body class="P1">
+<body class="b1">
     <header>
         <h1>Deportes</h1>
     </header>
     <main>
         <h2>Basketball</h2>
-        <p class="Deporte">Desde hace tiempo he visto diferentes juegos de la NBA, especialmente los más antiguos, donde participaron leyendas del baloncesto como Michael Jordan. Actualmente, mi principal inspiración para practicar este deporte es Stephen Curry.</p>
-        <img width="1000px" src="https://images.pexels.com/photos/163452/basketball-dunk-blue-game-163452.jpeg" alt="Fotografía de un jugador de Basketball">
+        <p class="deporte">Desde hace tiempo he visto diferentes juegos de la <abbr title="National Basketball Association" lang="en">NBA</abbr>, especialmente los más antiguos, donde participaron leyendas del baloncesto como <mark>Michael Jordan</mark>. Actualmente, mi principal inspiración para practicar este deporte es <mark>Stephen Curry</mark>.</p>
+        <img width="1000px" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fs.yimg.com%2Fny%2Fapi%2Fres%2F1.2%2FEfK8K68pdbP0IFRSn2Ag.Q--%2FYXBwaWQ9aGlnaGxhbmRlcjt3PTEyMDA7aD04MDA-%2Fhttps%3A%2F%2Fs.yimg.com%2Fos%2Fcreatr-uploaded-images%2F2024-02%2Fc899c050-cb6c-11ee-b356-7190aa5f509b&f=1&nofb=1&ipt=be0761f4f52bbc4623cc8761146b24b6b6181c3dd9ff1e3c99bb56d264e6289d" alt=" Lebron James y Stephen Curry">
+
+        <p>Para profundizar en la historia de Stephen Curry, te recomiendo ver el documental <cite><a href="https://tv.apple.com/mx/movie/stephen-curry-infravalorado/umc.cmc.23v0wxaiwz60bjy1w4vg7npun" target="_blank">Stephen Curry: Underrated</a></cite>, disponible en Apple TV+.</p>
+        <hr>
+
 
 
         <h2>Entrenamiento físico</h2>
-        <p class="Deporte">Me gusta ejercitarme para mantener un cuerpo sano y estar físicamente activo. Aunque disfruto mucho de este pasatiempo, reconozco que requiere bastante esfuerzo, por lo que procuro hacerlo con el objetivo de mantenerme saludable y no tomarlo de manera demasiado competitiva.</p>
+        <p class="deporte">Me gusta ejercitarme para mantener un cuerpo sano y estar <strong>físicamente activo</strong>. Aunque disfruto mucho de este pasatiempo, reconozco que requiere bastante esfuerzo, por lo que procuro hacerlo con el objetivo de <em>mantenerme saludable</em> y no tomarlo de manera demasiado competitiva.</p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Yko3GMseY40?si=LBL_8VJHlT0ydO-8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-
+        <form action="">
+            <label for="namedep">¿Cual es tu deporte favorito?</label>
+            <input type="text" id="namedep" name="namedep"><br>
+            <label for="hrs">¿Cuantas horas entrenas al día?</label>
+            <input type="number" name="hrs" id="hrs"><br>
+            <label for="correo">Te gustaría ingresar tu correo para recibir noticias sobre deportes</label><br>
+            <!-- <input type="email" name="correo" id="correo"> -->
+            <input type="button" value="Enviar">
+        </form>
     </main>
     <aside>
         
