--- a/jesuscruz125/pasatiemposv2/index.html
+++ b/jesuscruz125/pasatiemposv2/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>Pasatiempos</h1>
+        <h1>Mis pasatiempos</h1>
     </header>
     <main>
         <p>¡Bienvenido a mi espacio de pasatiempos! Aquí comparto mis actividades favoritas, desde aquellas que me permiten relajarme y disfrutar del tiempo libre, hasta las que desafían mi creatividad y habilidades. Cada sección está dedicada a un interés diferente, con información, imágenes y detalles que reflejan lo que más me apasiona. Espero que disfrutes explorando mis pasatiempos tanto como yo disfruto practicándolos.</p>
