--- a/jesuscruz125/pasatiemposv2/pasatiempo1.html
+++ b/jesuscruz125/pasatiemposv2/pasatiempo1.html
@@ -9,7 +9,7 @@
 </head>
 <body class="b1">
     <header>
-        <h1>Deportes</h1>
+        <h1 class="titulodep">Deportes</h1>
     </header>
     <main>
         <h2>Basketball</h2>
@@ -25,6 +25,8 @@
         <p class="deporte">Me gusta ejercitarme para mantener un cuerpo sano y estar <strong>físicamente activo</strong>. Aunque disfruto mucho de este pasatiempo, reconozco que requiere bastante esfuerzo, por lo que procuro hacerlo con el objetivo de <em>mantenerme saludable</em> y no tomarlo de manera demasiado competitiva.</p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/Yko3GMseY40?si=LBL_8VJHlT0ydO-8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
+        <hr>
+        <h3>Encuesta (opcional)</h3>
         <form action="">
             <label for="namedep">¿Cual es tu deporte favorito?</label>
             <input type="text" id="namedep" name="namedep"><br>
@@ -34,6 +36,7 @@
             <!-- <input type="email" name="correo" id="correo"> -->
             <input type="button" value="Enviar">
         </form>
+        <p>¡Muchas gracias por llegar hasta aquí!</p>
     </main>
     <aside>
         
