--- a/jesuscruz125/pasatiemposv2/pasatiempo2.html
+++ b/jesuscruz125/pasatiemposv2/pasatiempo2.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilosp2.css">
     <title>Pasatiempo música</title>
 </head>
 <body>
@@ -12,7 +13,7 @@
     <main>
         <h2>The Weeknd</h2>
         <p class="">Me gusta escuchar a The Weeknd, ya que tiene álbumes que puedo repetir una y otra vez sin aburrirme. Además, cuenta con la canción con más reproducciones en streaming: Blinding Lights.</p>
-        <img src="" alt="Cover del album Hurry Up Tomorrow">
+        <img width="1000px" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fmedia.pitchfork.com%2Fphotos%2F679cccbab742af95ca81e4fe%2Fmaster%2Fw_1280%252Cc_limit%2FThe-Weeknd-Hurry-Up-Tomorrow.jpeg&f=1&nofb=1&ipt=2816fc6c9900403175f544d7df68c9e8d8c7774103b7db240e8304adb171f81d" alt="Cover del album Hurry Up Tomorrow">
     </main>
     <aside>
 
