--- a/jesuscruz125/pasatiemposv2/pasatiempo3.html
+++ b/jesuscruz125/pasatiemposv2/pasatiempo3.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilosp2.css">
     <title>Series que mas disfruto</title>
 </head>
 <body>
     <header>
-
+        <h1>Series</h1>
     </header>
     <main>
         <h2>Gravity Falls</h2>
