creación archivo para 5to pasatiempo y creación de index de pasatiempos con formulario y  etiquetas nuevas

--- a/F-rn-ndo/index.html
+++ b/F-rn-ndo/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Práctica 2 Fernando Nicolás Molina Ramírez</title>
+    <title>EVIDENCIAS - Fernando Nicolás Molina Ramírez</title>
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
@@ -60,13 +60,9 @@
     <!-- Descripción de la práctica 3 -->    
         <p>En esta práctica nos encargamos de modificar la práctica 1 para darle una estructura más uniforme y tener un pasatiempo por archivo, dandole más visibilidad y visión.</p>
     <!-- Links práctica 3 -->    
-            <h2> LINKS</h2>
-
+            <h2> LINKS </h2>
                 <ul class="links">
-                    <li><a href="https://github.com/F-rn-ndo/practicaEv1">Repositorio de practicaEv1</a></li>
-                    <li><a href="https://github.com/F-rn-ndo/practicaEv1/blob/main/indexEv.html">Archivo HTML</a></li>
-                    <li><a href="https://github.com/F-rn-ndo/practicaEv1/blob/main/estilo.css">Archivo CSS</a></li>
-                    <li><a href="https://github.com/F-rn-ndo/practicaEv1/commits/main/">Commits de la práctica</a></li>
+                <li><a href="pasatiemposv2/indexPasatiempo.html">Explorar mis Pasatiempos</a></li>
                 </ul>
     <!-- Fecha de elaboración de práctica 3 -->
             <h2> Fechas de elaboración de la práctica</h2>
