--- a/F-rn-ndo/pasatiemposv2/indexPasatiempo.html
+++ b/F-rn-ndo/pasatiemposv2/indexPasatiempo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mis Pasatiempos - Fernando Nicolás Molina Ramírez</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="estilo_index.css">
 </head>
 <body>
     <h1>Mis Pasatiempos Favoritos</h1>
