--- a/jesuscruz125/index.html
+++ b/jesuscruz125/index.html
@@ -36,7 +36,13 @@
         <section>
             <h2>Practica numero 2</h2>
             <article>
-                <p>Realizada en clase anteriormente</p>
+                <p>En esta práctica, creé mi propia carpeta dentro de la organización y dentro puse un archivo llamado index.html. Este archivo será mi página personal, y agregué los enlaces que había usado en la primera práctica.</p>
+                <p>Enlaces requeridos:</p>
+                <ul>
+                    <li>Link Página personal de evidencias: <a href="https://fdw52ad2025.github.io/website52/jesuscruz125/index.html">https://fdw52ad2025.github.io/website52/jesuscruz125/index.html</a></li>
+                    <li>Link Commits: <a href="https://github.com/FDW52AD2025/website52/commits/main/?since=2025-08-20&until=2025-08-22&author=jesuscruz125">https://github.com/FDW52AD2025/website52/commits/main/?since=2025-08-20&until=2025-08-22&author=jesuscruz125</a></li>
+                </ul>
+                <p>Fecha commits: 20 al 22 de Agosto.</p>
             </article>
             <hr>
         </section>
@@ -54,8 +60,8 @@
                 
                 <p>Enlaces requeridos:</p>
                 <ul>
-                    <li><a href="https://github.com/FDW52AD2025/website52/blob/main/jesuscruz125/pasatiemposv2/index.html">Link Página pasatiempos versión 2</a></li>
-                    <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=jesuscruz125&since=2025-08-27&until=2025-08-27">Link Commits trabajo en clase 27 de agosto</a></li>
+                    <li>Link Página pasatiempos versión 2: <a href="https://github.com/FDW52AD2025/website52/blob/main/jesuscruz125/pasatiemposv2/index.html">https://github.com/FDW52AD2025/website52/blob/main/jesuscruz125/pasatiemposv2/index.html</a></li>
+                    <li>Link Commits trabajo en clase 27 de agosto<a href="https://github.com/FDW52AD2025/website52/commits/main/?author=jesuscruz125&since=2025-08-27&until=2025-08-27">https://github.com/FDW52AD2025/website52/commits/main/?author=jesuscruz125&since=2025-08-27&until=2025-08-27</a></li>
                     <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=jesuscruz125">Link Commits</a></li>
                 </ul>
 
@@ -74,7 +80,7 @@
 
     </aside>
     <footer>
-        
+
     </footer>
 </body>
 </html>
