--- a/ErickLTI/pasatiemposv2/pagina1.html
+++ b/ErickLTI/pasatiemposv2/pagina1.html
@@ -3,11 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pasatiempos</title>
 </head>
 <body>
-    <header></header>
-    <nav></nav>
+    <header>
+        <h1>Mis pasatiempos.</h1>
+
+        <nav>
+            <button><a href="" target="_blank">Pasatiempo 1</a></button>
+        </nav>
+
+        <nav>
+            <button><a href="" target="_blank">Pasatiempo 2</a></button>
+        </nav>
+
+        <nav>
+            <button><a href="" target="_blank">Pasatiempo 3</a></button>
+        </nav>
+
+        <nav>
+            <button><a href="" target="_blank">Pasatiempo 4</a></button>
+        </nav>
+    </header>
     <main></main>
     <aside></aside>
     <footer></footer>
