Modificación del primer pasatiempo y agregado de CSS

--- a/SunnyWiltshire/P2v1/index.html
+++ b/SunnyWiltshire/P2v1/index.html
@@ -3,21 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Pasatiempos( •̀ ω •́ )✧</title>
 </head>
-<body>
+<body class="m">
     <header>
-        <h1>Pasatiempos</h1>
+        <h1 class="m">Pasatiempos</h1>
     </header>
     <main>
-        <ul>
-            <li><a href="pasatiempo1.html">Pasatiempo 1</a></li>
-            <li><a href="pasatiempo2.html">Pasatiempo 2</a></li>
-            <li><a href="pasatiempo3.html">Pasatiempo 3</a></li>
-            <li><a href="pasatiempo4.html">Pasatiempo 4</a></li>
-        </ul>
+        <nav>
+            <ul>
+                <li><a href="pasatiempo1.html">Pasatiempo 1</a></li>
+                <li><a href="pasatiempo2.html">Pasatiempo 2</a></li>
+                <li><a href="pasatiempo3.html">Pasatiempo 3</a></li>
+                <li><a href="pasatiempo4.html">Pasatiempo 4</a></li>
+            </ul>
+        </nav>
     </main>
-    <aside></aside>
-    <footer></footer>
+    <aside class="m">
+        <h1 class="asid">Sobre mí...</h1>
+        <p class="m">Soy una estudiante de 20 años, originaria de Nuevo León, México. Me llamo Lisset García, mejor conocida como Sunny ☀️</p>
+        <p class="m">Soy egresada de la Escuela Industrial y Preparatoria Técnica Álvaro Obregón, siendo técnica en programación web. Conozco lenguajes como HTML, CSS (aunque no sean considerados lenguajes), Java, JavaScript, C#, C++, SQL, Python, entre otros.</p>
+        <p class="m">Actualmente estoy estudiando la carrera de Tecnologías de  Información en la Facultad de Contaduría Pública y Administración, cursando el 5.º semestre.</p>
+    </aside>
+    <footer>    
+        <p>Creado por: VLMG (AKA: SunnyW.py)</p>
+    </footer>
 </body>
 </html>
