--- a/SunnyWiltshire/P2v1/pasatiempo3.html
+++ b/SunnyWiltshire/P2v1/pasatiempo3.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Página personal de Sunny, pasatiempo2, Música."> 
+    <meta name="keywords" content="BTS, Bad Bunny, TWICE, New Jeans, ">
+    <meta name="author" content="Lisset García">
     <title>Música🎶</title>
 </head>
 <body>
