--- a/SunnyWiltshire/P2v1/pasatiempo4.html
+++ b/SunnyWiltshire/P2v1/pasatiempo4.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Página personal de Sunny, pasatiempo2, Escritura."> 
+    <meta name="keywords" content="Escritura, español, libro, historia">
+    <meta name="author" content="Lisset García">
     <title>Dibujo🎨</title>
 </head>
 <header>
