--- a/F-rn-ndo/index.html
+++ b/F-rn-ndo/index.html
@@ -64,7 +64,7 @@
                 <ul class="links">
                 <li><a href="pasatiemposv2/indexPasatiempo.html">Explorar mis Pasatiempos</a></li>
                 <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=F-rn-ndo&since=2025-08-27&until=2025-08-27">Commits 27 de agosto</a></li>
-                <li><a href="">Todos los commits de la página</a></li>
+                <li><a href="https://github.com/FDW52AD2025/website52/commits/main/F-rn-ndo">Todos los commits de la página</a></li>
                 </ul>
     <!-- Fecha de elaboración de práctica 3 -->
             <h2> Fechas de elaboración de la práctica</h2>
