--- a/Hugo-0699/index.html
+++ b/Hugo-0699/index.html
@@ -14,17 +14,18 @@
             <section>
                 <header>
                     <hr>
+                    <h2>Evidencia 1</h2>
+                    <hr>  
                     <h2>Practica 1</h2>
                 </header>
-                <p>Se creo un documento HTML en el que se elaboró un artículo acerca de "mis pasatiempos" haciendo uso de las etiquetas básicas vistas en la clase.</p>
+                <p>Para esta práctica, se creó un documento HTML en el que se elaboró un artículo acerca de mis pasatiempos personales haciendo uso de las etiquetas básicas vistas en la clase.</p>
                 <nav>
-                    <h3>Enlaces de GitHub</h3>
+                    <h4>Enlaces de GitHub</h4>
                     <ul>
                         <li><a target="_blank" href="https://github.com/Hugo-0699/Practica-1.git">REPOSITORIO DE GIT HUB</a></li>
                         <li><a target="_blank" href="https://hugo-0699.github.io/Practica-1/">SITIO PUBLICADO</a></li>
                         <li><a target="_blank" href="https://github.com/Hugo-0699/Practica-1/commits/main/?since=2025-08-13&until=2025-08-15">COMMITS DEL RESPOSITORIO</a></li>
                     </ul>
-                    <hr>
                 </nav>
             </section>
             
@@ -32,13 +33,28 @@
                 <header>
                     <h2>Practica 2</h2>
                 </header>
-                <p>En esta práctica se creó una carpeta personal en la organización y dentro de la misma se agregó un archivo llamado index.html.</p>
-                <p>El archivo index.html será la página personal de cada estudiante. Se solicitó agregar los links de la primera práctica.</p>
+                <p>Para esta práctica, se creó una carpeta personal en la organización y, dentro de la misma, se agregó un archivo llamado index.html en el que se adjuntarán todas las prácticas.</p>
+                <p>Fecha de los commits: 20 al 22 de Agosto.</p>
                 <nav>
-                    <h3>Enlaces de GitHub</h3>
+                    <h4>Enlaces de GitHub</h4>
                     <ul>
                         <li><a target="_blank" href="https://fdw52ad2025.github.io/website52/Hugo-0699/index.html">LINK DEL PERFIL PERSONAL</a></li>
                         <li><a target="_blank" href="https://github.com/FDW52AD2025/website52/commits/main/?author=Hugo-0699&since=2025-08-20&until=2025-08-22">COMMITS DEL RESPOSITORIO</a></li>
+                    </ul>
+                </nav>
+            </section>
+
+            <section>
+                <header>
+                    <h2>Practica 3</h2>
+                </header>
+                <p>En esta práctica se modificará la página de los pasatiempos que se desarrolló en mi cuenta personal, con el objetivo de crear una segunda versión de la primera práctica y hacer uso de las etiquetas vistas recientemente en clase, pero esta vez guardada en la organización. Se hará uso de cinco archivos HTML para la información de los pasatiempos.</p>
+                <p>Fecha de los commits: 27 al 29 de Agosto.</p>
+                <nav>
+                    <h4>Enlaces de GitHub</h4>
+                    <ul>
+                        <li><a target="_blank" href="">Aún no esta listo</a></li>
+                        <li><a target="_blank" href="">Aún no esta listo</a></li>
                     </ul>
                     <hr>
                 </nav>
@@ -51,6 +67,7 @@
             <p>Desarrollado por el alumno: Hugo Alejandro Zapata Rosales</p>
             <p>Matricula: 2088379</p>
             <p>Grupo: 52</p>
+            <hr>
         </address>
     </footer>
 </body>
