pasatiempo familiar, css e index actualizados

--- a/F-rn-ndo/pasatiemposv2/indexPasatiempo.html
+++ b/F-rn-ndo/pasatiemposv2/indexPasatiempo.html
@@ -19,11 +19,11 @@
         
         <nav>
             <ul class="links">
-                <li><a href="secciones/pasatiempo1.html">🎮 Jugar <abbr title="Videojuego Battle Royale">Fortnite</abbr></a></li>
-                <li><a href="secciones/pasatiempo2.html">🎵 Componer Música</a></li>
-                <li><a href="secciones/pasatiempo3.html">💻 Videos de Programación</a></li>
-                <li><a href="secciones/pasatiempo4.html">🍳 Cocinar</a></li>
-                <li><a href="secciones/pasatiempo5.html">👨‍👩‍👧‍👦 Estar con mi familia</a></li>
+                <li><a href="secciones/pasatiempo1.html">Jugar <abbr title="Videojuego Battle Royale">Fortnite</abbr></a></li>
+                <li><a href="secciones/pasatiempo2.html">Componer Música</a></li>
+                <li><a href="secciones/pasatiempo3.html">Programación</a></li>
+                <li><a href="secciones/pasatiempo4.html">Cocinar</a></li>
+                <li><a href="secciones/pasatiempo5.html">Estar con mi familia</a></li>
             </ul>
         </nav>
         
