Modificacion index pagina  principal

--- a/Bejesusrey/pasatiemposV2/index.html
+++ b/Bejesusrey/pasatiemposV2/index.html
@@ -3,12 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Evidencias</title>
+    <title>Pagina Principal</title>
 </head>
 
 <body>
-
-
-
+    <header>Mis Pasatiempos</header>
+    <main>
+        <nav>
+            <ul>
+                <li><a href="pagina1.html">Primer Pasatiempo</a></li>
+                <li><a href="pagina2.html">Segundo Pasatiempo</a></li>
+                <li><a href="pagina3.html">Tercer Pasatiempo</a></li>
+                <li><a href="pagina4.html">Cuarto Pasatiempo</a></li>
+                <li><a href="pagina5.html">Quinto Pasatiempo</a></li>
+            </ul>
+        </nav>
+    </main>
+    <aside>
+        <h2>Dato Extra</h2>
+        <p>Lo que espero de mi para esta actividad es poder practicar todo lo aprendido en clase y se me facilite las siguientes practicas</p>
+    </aside>
+    <footer>
+        <p>&copy; Creado por Jesus Reyes</p>
+    </footer>
 </body>
 </htm>
