Se agregan apartados faltantes para completar evidencia

--- a/MiguelABanda/pasatiempos2/deportes.html
+++ b/MiguelABanda/pasatiempos2/deportes.html
@@ -8,8 +8,15 @@
 </head>
 <article>
     <header>
-        <p class="titulo">Fútbol</p>
+        <h1 align="center"> Pasatiempo Futbol </h1>
     </header>
+    <nav align="center"> 
+        <a class="btn" href="paginaprincipal.html"> Inicio </a>
+        <a class="btn" href="deportes.html">Fútbol</a>
+        <a class="btn" href="dormir.html">Dormir</a>
+        <a class="btn" href="peliculas.html">Peliculas</a>
+        <a class="btn" href="videojuegos.html">Videojuegos</a>
+    </nav>
     <section>
             <p>
                 Bueno uno de mis pasatiempos favoritos diría yo mi favorito es jugar al Fútbol lo e practicado desde los 6 años de edad, al principio empezó como algo para hacer deporte solamente algo pasajero, pero termino siendo mi deporte favorito y termino siendo una actividad que me saca de un momento triste.
