--- a/MiguelABanda/pasatiempos2/paginaprincipal.html
+++ b/MiguelABanda/pasatiempos2/paginaprincipal.html
@@ -8,13 +8,14 @@
 </head>
 <body>
     <header>
-        <h1>PRÁCTICA 3 - PASATIEMPOS REMASTERTIZADO</h1>
+        <h1 align="center">PRÁCTICA 3 - PASATIEMPOS REMASTERTIZADO</h1>
     </header>
-    <nav>
-        <a href="deportes.html" target="_blank">Deportes</a>
-        <a href="paginaprincipal.html">Dormir</a>
-        <a href="paginaprincipal.html">Peliculas</a>
-        <a href="paginaprincipal.html">Videojuegos</a>
+    <nav align="center">
+        <a class="btn" href="paginaprincipal.html"> Inicio </a>
+        <a class="btn" href="deportes.html">Fútbol</a>
+        <a class="btn" href="dormir.html">Dormir</a>
+        <a class="btn" href="peliculas.html">Peliculas</a>
+        <a class="btn" href="videojuegos.html">Videojuegos</a>
     </nav>
     <main>
         <form action="">
