--- a/FernandaGomezG/practica3/pagina1.html
+++ b/FernandaGomezG/practica3/pagina1.html
@@ -9,9 +9,14 @@
 <body>
     <header>
         <main>
-            <h1 class="titulos">🎶✨ CONCIERTOS 🎶✨</h1>
-            <p style="margin-left: 20px;" class="titulos">Ir a conciertos es de mis pasatiempos favoritos.</p>
+            <h1 class="titulos" style="text-align: center;">🎶✨ CONCIERTOS 🎶✨</h1>
+            
+            <p style="margin-left: 330px;" class="textostyle">Ir a conciertos es de mis pasatiempos favoritos.</p>
             <img src="img/concertpage.jpg.jpeg" alt="Concierto de Morat, 28 noviembre, 2025." class="concertimg">
+            <p style="margin-left: 330px; bottom: 380px;"  class="textostyle" >Al último concierto al que asistí fue al de Morat.Ir a conciertos es uno de mis hobbies favoritos,
+                aunque no he asistido a muchos aún, espero poder escuchar a más de mis artistas preferidos en vivo
+                en la medida de lo posible.
+            </p>
         </main>
     </header>
 </body>
