Texto en páginas 1 y 2

--- a/victoriabalderas/pasatiemposver2/pagina1.html
+++ b/victoriabalderas/pasatiemposver2/pagina1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="uanl,facpya,lti">
     <meta name="author" content="vabg">
-    <title>Pagina1</title>
+    <title>La Danza</title>
 
 </head>
 <body>
