--- a/victoriabalderas/pasatiemposver2/pagina3.html
+++ b/victoriabalderas/pasatiemposver2/pagina3.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="uanl,facpya,lti">
     <meta name="author" content="vabg">
-    <title>Practica 3</title>
+    <title>Trabajo</title>
 
 </head>
 <body>
@@ -16,7 +16,6 @@
             </ul>
         </nav>
         <h1>Mi trabajo</h1></header>
-    <nav></nav>
     <main></main>
 
     <aside></aside>
