--- a/FernandaGomezG/practica3/pagina1.html
+++ b/FernandaGomezG/practica3/pagina1.html
@@ -11,12 +11,21 @@
         <main>
             <h1 class="titulos" style="text-align: center;">🎶✨ CONCIERTOS 🎶✨</h1>
             
-            <p style="margin-left: 330px;" class="textostyle">Ir a conciertos es de mis pasatiempos favoritos.</p>
+            <p style="margin-left: 30px;" class="textostyle">Ir a conciertos es de mis pasatiempos favoritos.</p>
             <img src="img/concertpage.jpg.jpeg" alt="Concierto de Morat, 28 noviembre, 2025." class="concertimg">
-            <p style="margin-left: 330px; bottom: 380px;"  class="textostyle" >Al último concierto al que asistí fue al de Morat.Ir a conciertos es uno de mis hobbies favoritos,
+            <p style="margin-left: 350px; margin-right: 700px; bottom: 340px;"  class="textostyle" >Al último concierto al que asistí fue al de Morat. Ir a conciertos es uno de mis hobbies favoritos,
                 aunque no he asistido a muchos aún, espero poder escuchar a más de mis artistas preferidos en vivo
                 en la medida de lo posible.
+                Este concierto en especial lo disfruté mucho pues lo compartí con quienes aprecio y era una fecha que
+                esperaba mucho que llegara.
             </p>
+            <article>
+                <h2 class="titulos">Artista</h2>
+                <section>
+                    <h3 style="margin-left: 30px;" class="textostyle"> Morat </h3>
+                </section>
+
+            </article>
         </main>
     </header>
 </body>
