--- a/victoriabalderas/pasatiemposver2/pagina5.html
+++ b/victoriabalderas/pasatiemposver2/pagina5.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="uanl,facpya,lti">
     <meta name="author" content="vabg">
-    <title>Practica 3</title>
+    <title>Encuesta</title>
 
 </head>
 <body>
