--- a/victoriabalderas/pasatiemposver2/pagina3.html
+++ b/victoriabalderas/pasatiemposver2/pagina3.html
@@ -16,7 +16,31 @@
             </ul>
         </nav>
         <h1>Mi trabajo</h1></header>
-    <main></main>
+    <main>
+        <section>
+            <header>
+                <h2>La historia</h2>
+            </header>
+            <p>El emprendimiento de mi madre comenzó cuando yo era pequeña. A ella le gustaba confeccionar vestidos para ocasiones especiales para mi y para mi hermana. Poco a poco y gracias a mucha práctica comenzó a realizar pedidos como favores para algunos de sus conocidos y empezó a crecer. </p>
+
+            <img src="" alt="foto aquí">
+            <footer>Fotografía</footer>
+        </section>
+
+        <section>
+            <header>
+                <h2>Crecimiento</h2>
+            </header>
+            <p>Con el paso de los años comenzó a aceptar pedidos más grandes, elaboraba vestuarios para asambleas, disfraces para halloween, navidad e incluso de la primavera, por lo que empecé a ayudarle dentro de la elaboración de los trajes.</p>
+        </section>
+
+        <section>
+            <header>
+                <h2>Actualidad</h2>
+            </header>
+            <p>Actualmente estamos a un mes de cumplir 10 años en la industria, hemos llegado a distintos estados de la república, colegios y academias de danza. </p>
+        </section>
+    </main>
 
     <aside></aside>
     <footer></footer>
