--- a/jesuscruz125/index.html
+++ b/jesuscruz125/index.html
@@ -54,14 +54,14 @@
                 <p>La práctica consiste en actualizar la página de pasatiempos creada anteriormente, haciendo una versión 2 que se guardará en la organización. Para esto, se deben crear cinco archivos HTML, uno por cada pasatiempo, usando etiquetas como header, nav, main, aside y footer, para que cada página muestre la información de manera ordenada y clara.</p>
 
                 
-                <p>Enlace a la practica 3: <a href="/jesuscruz125/pasatiemposv2/index.html">Página de pasatiempos versión 2</a></p>
+                <p>Enlace a la practica 3: <a href="jesuscruz125/pasatiemposv2/index.html">Página de pasatiempos versión 2</a></p>
 
                 <!-- <h3>Enlaces</h3> -->
                 
                 <p>Enlaces requeridos:</p>
                 <ul>
                     <li>Link Página pasatiempos versión 2: <a href="https://github.com/FDW52AD2025/website52/blob/main/jesuscruz125/pasatiemposv2/index.html">https://github.com/FDW52AD2025/website52/blob/main/jesuscruz125/pasatiemposv2/index.html</a></li>
-                    <li>Link Commits trabajo en clase 27 de agosto<a href="https://github.com/FDW52AD2025/website52/commits/main/?author=jesuscruz125&since=2025-08-27&until=2025-08-27">https://github.com/FDW52AD2025/website52/commits/main/?author=jesuscruz125&since=2025-08-27&until=2025-08-27</a></li>
+                    <li>Link Commits trabajo en clase 27 de agosto<a href="https://github.com/FDW52AD2025/website52/commits/main/?author=jesuscruz125&since=2025-08-27&until=2025-08-27"></a></li>
                     <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=jesuscruz125">Link Commits</a></li>
                 </ul>
 
