--- a/jesuscruz125/index.html
+++ b/jesuscruz125/index.html
@@ -54,7 +54,7 @@
                 <p>La práctica consiste en actualizar la página de pasatiempos creada anteriormente, haciendo una versión 2 que se guardará en la organización. Para esto, se deben crear cinco archivos HTML, uno por cada pasatiempo, usando etiquetas como header, nav, main, aside y footer, para que cada página muestre la información de manera ordenada y clara.</p>
 
                 
-                <p>Enlace a la practica 3: <a href="jesuscruz125/pasatiemposv2/index.html">Página de pasatiempos versión 2</a></p>
+                <p>Enlace a la practica 3: <a href="pasatiemposv2/index.html">Página de pasatiempos versión 2</a></p>
 
                 <!-- <h3>Enlaces</h3> -->
                 
