Agregado masivo: soundtrack oficial de mi pagina, imagen de fondo e icono, agregado de la hoja de estilos, todas las paginas tienen audio en autoreproducción, mejora del menú principal

--- a/aLe.php27/pasatiempos_v2/index.html
+++ b/aLe.php27/pasatiempos_v2/index.html
@@ -4,10 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pasatiempos_V2</title>
+    <meta name="description" content="Pasatiempos de Alejandro Santiago Coronado">
+    <meta name="keywords" content="balatro, brawl, stars, minecraft, gym">
+    <meta name="author" content="Alejandro Santiago Coronado">
+    <link rel="stylesheet" href="estilos.css">
+    <link rel="icon" href="/imagenes/jimbo.png" type="image/png">
+    <audio src="balatromaintheme.mp3" autoplay loop></audio>
 </head>
-<body>
-    <h2>Aqui ira un menú pasado de burger</h2>
-    <p>Un Geto starboy</p>
-    <img width="500" src="imagenes/getostarboy.jpg">
+<body class="bodyindex">
+    <header>
+        <h1 class="h1headerindex">Mis pasatiempos</h1>
+    </header>
+    <main>
+        <ul class="ulindex">
+            <li class="liindex"><a class="aindex" href="pasatiempo1.html">Videojuegos</a></li>
+            <li class="liindex"><a class="aindex" href="pasatiempo2.html">Musica</a></li>
+            <li class="liindex"><a class="aindex" href="pasatiempo3.html">Series</a></li>
+            <li class="liindex"><a class="aindex" href="pasatiempo4.html">Psicologia</a></li>
+            <li class="liindex"><a class="aindex" href="test.html">Test</a></li>
+        </ul>
+            <br><br>
+        <center><img class="imgindexgeto" width="400" src="imagenes/getostarboy.jpg"></center>
+    </main>
+    <footer>
+        <address>
+            <p class="psombra">Desarrollado por Alejandro Santiago Coronado</p>
+        </address>
+    </footer>
 </body>
 </html>
