--- a/aLe.php27/pasatiempos_v2/pasatiempo3.html
+++ b/aLe.php27/pasatiempos_v2/pasatiempo3.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Series</title>
+    <link rel="icon" href="/imagenes/jimbo.png" type="image/png">
+    <audio src="balatroarcanatheme.mp3" autoplay loop></audio>
 </head>
 <body>
     <p>Series</p>
