--- a/aLe.php27/pasatiempos_v2/test.html
+++ b/aLe.php27/pasatiempos_v2/test.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test</title>
+    <link rel="icon" href="/imagenes/jimbo.png" type="image/png">
+    <audio src="balatrobosstheme.mp3" autoplay loop></audio>
 </head>
 <body>
     <p>Test sobre todo lo visto</p>
