--- a/ernesgarcia06/pasatiemposver2/index.html
+++ b/ernesgarcia06/pasatiemposver2/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos.css">
     <title>Pasatiempos</title>
 </head>
-<body>
+<body class="menu">
     <header>
         <h1>¿Quién soy?</h1>
     </header>
     <main>
-        <p>Soy Luis Ernesto Guzmán Garcia, tengo 18 años y a continuación presentare algunos de mis pasatiempos preferidos</p>
+        <p>Soy Luis Ernesto Guzmán García, tengo 18 años, estudio la carrera de <abbr title="Licenciado en Tecnologias de Información">LTI</abbr> y vivo en Monterrey, Nuevo León desde que nací.</p>
+        <p>A continuación presentare algunos de mis pasatiempos preferidos para que me conozcan un poco más.</p>
     </main>
     <nav>
         <ul>
@@ -19,9 +20,19 @@
             <li><a href="pagina2.html" target="_blank">Deportes favoritos</a></li>
             <li><a href="pagina3.html" target="_blank">Musica favorita</a></li>
             <li><a href="pagina4.html" target="_blank">Paseos</a></li>
+            <li><a href="pagina5.html" target="_blank">Acompañame al estadio</a></li>
         </ul>
     </nav>
-    <aside></aside>
+    <aside class="contenido">
+        <h3>Contenido</h3>
+        <ul>
+            <li>🎮 Videojuegos</li>
+            <li>⚽ Deportes</li>
+            <li>🎵 Música</li>
+            <li>👨‍👩‍👧‍👦 Paseos</li>
+            <li>🛄 Acompañame al estadio</li>
+        </ul>
+    </aside>
     <footer>
         <address>Pagina Desarrollada por Luis Ernesto Guzmán García</address>
         <address>Ciudad Universitaria, San Nicolas de los Garza</address>
