Corrección con el icono de cada pagina

--- a/aLe.php27/pasatiempos_v2/index.html
+++ b/aLe.php27/pasatiempos_v2/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="balatro, brawl, stars, minecraft, gym">
     <meta name="author" content="Alejandro Santiago Coronado">
     <link rel="stylesheet" href="estilos.css">
-    <link rel="icon" href="/imagenes/jimbo.png" type="image/png">
+    <link rel="icon" href="imagenes/jimbo.png" type="image/png">
     <audio src="balatromaintheme.mp3" autoplay loop></audio>
 </head>
 <body class="bodyindex">
