--- a/aLe.php27/pasatiempos_v2/pasatiempo4.html
+++ b/aLe.php27/pasatiempos_v2/pasatiempo4.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Psicologia</title>
-    <link rel="icon" href="/imagenes/jimbo.png" type="image/png">
+    <link rel="stylesheet" href="estilos.css">
+    <link rel="icon" href="imagenes/jimbo.png" type="image/png">
     <audio src="balatrocelestialtheme.mp3" autoplay loop></audio>
 </head>
 <body>
