--- a/NerickRamirez/PasatiemposV2/Pagina1.html
+++ b/NerickRamirez/PasatiemposV2/Pagina1.html
@@ -27,8 +27,11 @@
 
 
          <footer>
-            <p>Apodaca N.L.</p>
-            <p>Desarrollado por Nerick Ramirez - Fundamentos de Desarrollo Web</p>
+            <address>
+                <p>Apodaca N.L.</p>
+                <p>Desarrollado por Nerick Ramirez - Fundamentos de Desarrollo Web</p>
+            </address>
+            
         </footer>
     </main>
 </body>
