--- a/ernesgarcia06/index.html
+++ b/ernesgarcia06/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es-mx">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +7,7 @@
 </head>
 <body>
     <header>
+        <a href="/index.html"><span style="font-size: 30px;">🏠</span></a>
         <h1>Evidencias Fundamentos de Desarrollo Web</h1>
     </header>
     <main>
