--- a/ernesgarcia06/pasatiemposver2/index.html
+++ b/ernesgarcia06/pasatiemposver2/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es-mx">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +8,7 @@
 </head>
 <body class="menu">
     <header>
+        <a href="/ernesgarcia06/index.html"><span style="font-size: 30px;">⬅️</span></a>
         <h1>¿Quién soy?</h1>
     </header>
     <main>
