--- a/ernesgarcia06/pasatiemposver2/pagina1.html
+++ b/ernesgarcia06/pasatiemposver2/pagina1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es-mx">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +8,7 @@
     <title>Videojuegos 🎮</title>
 </head>
 <body class="fondos">
-    <li><a href="index.html">Volver a menú principal</a></li>
+    <a href="index.html"><span style="font-size: 30px;">⬅️</span></a>
     <header>
         <h1 class="titulos">🎮Videojuegos favoritos🎮</h1>
     </header>
