--- a/ernesgarcia06/pasatiemposver2/pagina2.html
+++ b/ernesgarcia06/pasatiemposver2/pagina2.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es-mx">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <li><a href="index.html">Volver a menú principal</a></li>
+    <a href="index.html"><span style="font-size: 30px;">⬅️</span></a>
 </body>
 </html>
