--- a/ernesgarcia06/pasatiemposver2/pagina3.html
+++ b/ernesgarcia06/pasatiemposver2/pagina3.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es-mx">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
+    <a href="index.html"><span style="font-size: 30px;">⬅️</span></a>
+
     
 </body>
 </html>
