--- a/jesuscruz125/index.html
+++ b/jesuscruz125/index.html
@@ -18,7 +18,7 @@
             <li><a href="https://jesuscruz125.github.io/Ev1P1/">Enlace a la página</a></li>
         </ul>
 
-        <h2>Descripción</h3>
+        <h2>Descripción</h2>
         <p>En la practica número 1 se creo una página web donde explicaremos algunos de nuestros pasatiempos. En mi caso fueron 5 pasatiempos.</p>
         <ul>
             <li>Deportes</li>
@@ -60,7 +60,7 @@
                 
                 <p>Enlaces requeridos:</p>
                 <ul>
-                    <li>Link Página pasatiempos versión 2: <a href="https://github.com/FDW52AD2025/website52/blob/main/jesuscruz125/pasatiemposv2/index.html">https://github.com/FDW52AD2025/website52/blob/main/jesuscruz125/pasatiemposv2/index.html</a></li>
+                    <li>Link Página pasatiempos versión 2: <a href="https://fdw52ad2025.github.io/website52/jesuscruz125/pasatiemposv2/index.html">https://fdw52ad2025.github.io/website52/jesuscruz125/pasatiemposv2/index.html</a></li>
                     <li>Link Commits trabajo en clase 27 de agosto<a href="https://github.com/FDW52AD2025/website52/commits/main/?author=jesuscruz125&since=2025-08-27&until=2025-08-27"></a></li>
                     <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=jesuscruz125">Link Commits</a></li>
                 </ul>
@@ -80,7 +80,7 @@
 
     </aside>
     <footer>
-
+        <p>&copy; Creado por Jesus Cruz. Todos los derechos reservados </p>
     </footer>
 </body>
 </html>
