Agregado de CSS y segundo pasatiempo.

--- a/SunnyWiltshire/P2v1/index.html
+++ b/SunnyWiltshire/P2v1/index.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="styles.css">
     <title>Pasatiempos( •̀ ω •́ )✧</title>
 </head>
-<body class="m">
+<body>
     <header>
-        <h1 class="m">Pasatiempos</h1>
+        <h1>Pasatiempos</h1>
     </header>
     <main>
         <nav>
@@ -20,11 +20,11 @@
             </ul>
         </nav>
     </main>
-    <aside class="m">
+    <aside >
         <h1 class="asid">Sobre mí...</h1>
-        <p class="m">Soy una estudiante de 20 años, originaria de Nuevo León, México. Me llamo Lisset García, mejor conocida como Sunny ☀️</p>
-        <p class="m">Soy egresada de la Escuela Industrial y Preparatoria Técnica Álvaro Obregón, siendo técnica en programación web. Conozco lenguajes como HTML, CSS (aunque no sean considerados lenguajes), Java, JavaScript, C#, C++, SQL, Python, entre otros.</p>
-        <p class="m">Actualmente estoy estudiando la carrera de Tecnologías de  Información en la Facultad de Contaduría Pública y Administración, cursando el 5.º semestre.</p>
+        <p>Soy una estudiante de 20 años, originaria de Nuevo León, México. Me llamo Lisset García, mejor conocida como Sunny ☀️</p>
+        <p>Soy egresada de la Escuela Industrial y Preparatoria Técnica Álvaro Obregón, siendo técnica en programación web. Conozco lenguajes como HTML, CSS (aunque no sean considerados lenguajes), Java, JavaScript, C#, C++, SQL, Python, entre otros.</p>
+        <p>Actualmente estoy estudiando la carrera de Tecnologías de  Información en la Facultad de Contaduría Pública y Administración, cursando el 5.º semestre.</p>
     </aside>
     <footer>    
         <p>Creado por: VLMG (AKA: SunnyW.py)</p>
