--- a/AlejandroRmzEsc/index.html
+++ b/AlejandroRmzEsc/index.html
@@ -2,10 +2,35 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <title>Evidencias</title>
 </head>
 <body>
+    <header>
+        <h1>Evidencias</h1>
+    </header>
+    <div class="content">
+        <div class="evidencia">
+            <h2>Evidencia 1</h2>
+            <p>En esta evidencia nos solicitaron realizar una pagina en la cual plasmemos nuestros hobbies favoritos, </p>
+            <div class="opcion">
+                <a href="#"><p>Lorem ipsum dolor sit amet</p></a>
+                <a href="#"><p>Lorem ipsum dolor sit amet</p></a>
+                <a href="#"><p>Lorem ipsum dolor sit amet</p></a>
+                <!--<a href="#"><p>Lorem ipsum dolor sit amet</p></a>-->
+            </div>
+        </div>
+        <div class="evidencia">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus voluptas, animi dolor placeat corporis sequi quae? Impedit, libero officiis cumque rem voluptatum cum atque earum error aspernatur, aperiam ab enim.</p>
+        </div>
+        <div class="evidencia">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus voluptas, animi dolor placeat corporis sequi quae? Impedit, libero officiis cumque rem voluptatum cum atque earum error aspernatur, aperiam ab enim.</p>
+        </div>
+                <div class="evidencia">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus voluptas, animi dolor placeat corporis sequi quae? Impedit, libero officiis cumque rem voluptatum cum atque earum error aspernatur, aperiam ab enim.</p>
+        </div>
+    </div>
+    <!--
     <div id="containerall">
         <div class="head">
             <h2 class="container">Evidencias - Alejandro Ramirez</h2>
@@ -24,5 +49,6 @@
             </a>
         
     </div>
+    -->
 </body>
 </html>
