--- a/FernandaGomezG/practica3/pagina1.html
+++ b/FernandaGomezG/practica3/pagina1.html
@@ -12,7 +12,7 @@
             <h1 class="titulos" style="text-align: center;">🎶✨ CONCIERTOS 🎶✨</h1>
             
             <p style="margin-left: 30px;" class="textostyle">Ir a conciertos es de mis pasatiempos favoritos.</p>
-            <img src="img/concertpage.jpg.jpeg" alt="Concierto de Morat, 28 noviembre, 2025." class="concertimg">
+            <img src="img/concertpage.jpg.jpeg" alt="Concierto de Morat, 28 noviembre, 2025." class="img">
             <p style="margin-left: 350px; margin-right: 700px; bottom: 340px;"  class="textostyle" >Al último concierto al que asistí fue al de Morat. Ir a conciertos es uno de mis hobbies favoritos,
                 aunque no he asistido a muchos aún, espero poder escuchar a más de mis artistas preferidos en vivo
                 en la medida de lo posible.
@@ -20,10 +20,14 @@
                 esperaba mucho que llegara.
             </p>
             <article>
-                <h2 class="titulos">Artista</h2>
+                <h2 style="margin-left: 800px;bottom: 580px;" class="titulosarticle">Artista</h2>
                 <section>
-                    <h3 style="margin-left: 30px;" class="textostyle"> Morat </h3>
+                    <h3 style="margin-left: 800px; margin-right: 200px; bottom: 600px;" class="section"> <li><a href="https://www.instagram.com/morat?igsh=djkyMWpmZnU5OWMw">Morat</a></li></h3>
+                    <img src="img/moratimg.jpeg" alt="Concierto de Morat" class="img2" style="margin-left: 830px; bottom: 600px;">
+                    <p> Morat es una banda de música de género pop, está compuesta por 4 integrantes colombianos:
+                    </p>
                 </section>
+                <aside><a href="https://open.spotify.com/playlist/42MoOwzPduAMa3QCqBhKgk?si=aipuISCiSFyM9H4J8f_2ZA">Setlist, Los estadios Tour 2024.</a></aside>
 
             </article>
         </main>
