--- a/aLe.php27/pasatiempos_v2/pasatiempo2.html
+++ b/aLe.php27/pasatiempos_v2/pasatiempo2.html
@@ -8,7 +8,29 @@
     <link rel="icon" href="imagenes/jimbo.png" type="image/png">
     <audio src="balatroshoptheme.mp3" autoplay loop></audio>
 </head>
-<body>
-    <p>Musica</p>
+<body class="bodypasatiempos">
+  <header class="headerpasatiempos">
+    <h1>🎵 Musica</h1>
+    <p>Mi lugar seguro antes, durante y después de mi día</p>
+  </header>
+  <main class="mainpasatiempos_musica">
+    <h2>Presentemos a los top artistas de mi Spotify...</h2>
+    <img class="artistasdecoracion" src="imagenes/topartistas.png" alt="Top artistas de Spotify">
+    <p>Desde siempre he sido muy versatil en el lado de la musica, mi top de artistas de Spotify es el claro ejemplo de ello, en primer lugar siempre por los siglos de los siglos estará The Weeknd, ya lo que sigue puede variar, puedo estar depresivo como Lana del Rey o Junior H, puedo ser alucin para escuchar Fuerza Regida, o simplemente soy migajero de corazón para escuchar José José. Pero mi mood favorito es CACHIRULO!</p>
+  </main>
+  <aside class="asidepasatiempos_musica">
+    <h3>🎧Top 5: Canciones de The Weeknd favoritas de Ale</h3>
+      <p>The Weeknd es sin duda uno de mis artistas favoritos. Su música es una mezcla de melancolía, energía y un estilo inconfundible que siempre logra atraparme. Aquí dejo un top 5 de canciones que siempre tengo en mi playlist:</p>
+    <ul>
+        <li><a target="_blank" href="https://open.spotify.com/intl-es/track/6VwBbL8CzPiC4QV66ay7oR">Número 1</a></li>
+        <li><a target="_blank" href="https://open.spotify.com/intl-es/track/7fBv7CLKzipRk6EC6TWHOB">Número 2</a></li>
+        <li><a target="_blank" href="https://open.spotify.com/intl-es/track/2p8IUWQDrpjuFltbdgLOag">Número 3</a></li>
+        <li><a target="_blank" href="https://open.spotify.com/intl-es/track/6WzRpISELf3YglGAh7TXcG">Número 4</a></li>
+        <li><a target="_blank" href="https://open.spotify.com/intl-es/track/0sTBOp1hdayTjw6UOyPyi6">Número 5</a></li>
+    </ul>
+  </aside>
+  <footer class="footerpasatiempos">
+    <p>&copy; 2025 Alejandro Santiago Coronado - Todos los derechos reservados</p>
+  </footer>
 </body>
 </html>
