--- a/ernesgarcia06/pasatiemposver2/index.html
+++ b/ernesgarcia06/pasatiemposver2/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="menu">
     <header>
-        <a href="/ernesgarcia06/index.html"><span style="font-size: 30px;">⬅️</span></a>
+        <a href="https://fdw52ad2025.github.io/website52/ernesgarcia06/index.html"><span style="font-size: 30px;">⬅️</span></a>
         <h1>¿Quién soy?</h1>
     </header>
     <main>
@@ -17,11 +17,11 @@
     </main>
     <nav>
         <ul>
-            <li><a href="pagina1.html" target="_blank">Videojuegos favoritos</a></li>
-            <li><a href="pagina2.html" target="_blank">Deportes favoritos</a></li>
-            <li><a href="pagina3.html" target="_blank">Musica favorita</a></li>
-            <li><a href="pagina4.html" target="_blank">Paseos</a></li>
-            <li><a href="pagina5.html" target="_blank">Acompañame al estadio</a></li>
+            <li><a href="pagina1.html">Videojuegos favoritos</a></li>
+            <li><a href="pagina2.html">Deportes favoritos</a></li>
+            <li><a href="pagina3.html">Música favorita</a></li>
+            <li><a href="pagina4.html">Paseos</a></li>
+            <li><a href="pagina5.html">Acompañame al estadio</a></li>
         </ul>
     </nav>
     <aside class="contenido">
@@ -35,7 +35,7 @@
         </ul>
     </aside>
     <footer>
-        <address>Pagina Desarrollada por Luis Ernesto Guzmán García</address>
+        <address>&copy;Página Desarrollada por Luis Ernesto Guzmán García</address>
         <address>Ciudad Universitaria, San Nicolas de los Garza</address>
     </footer>
 </body>
