--- a/ernesgarcia06/pasatiemposver2/pagina2.html
+++ b/ernesgarcia06/pasatiemposver2/pagina2.html
@@ -3,9 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="estilos.css">
+
+    <title>Deportes</title>
 </head>
-<body>
+<body class="fondos">
     <a href="index.html"><span style="font-size: 30px;">⬅️</span></a>
+    <header>
+        <h1 class="titulos">⚽Deportes Favoritos⚽</h1>
+    </header>
+    <main >
+        <p class="menu-pag"><span style="font-size: 30px;"><mark><i>Fútbol</i></mark></span></p>
+          <article>
+            <section>
+                <header>
+                    <p>El fútbol me ha gustado desde niño, tengo amor por este deporte desde que recuerdo, <em>mi equipo favorito es tigres</em>, el cual me ha dado muchas alegrias.</p>
+                    <p>Un momento que recuerdo mucho y que siempre será de mis favoritos en la historia de mi equipo fue la final que ganamos en 2023 a Chivas.</p>
+                    <div class="imagenes">
+                        <img src="img/tigresUANL.jpg" alt="Tigres UANL">
+                    </div>
+                    <p>Para entender mejor el sentimiento que me genero este partido te recomiendo ver <cite><a href="https://youtu.be/ngNA5mv9J0Q?si=3kj0cZonv0gfX8B3" target="_blank">Tigres VS CHIVAS 2023</a></cite> en YouTube</p>
+                </header>
+            </section>  
+          </article>
+          <p class="menu-pag"><span style="font-size: 30px;"><mark><i>Béisbol</i></mark></span></p>
+          <article>
+            <section>
+                <header>
+                    <p>A partir del año pasado (2024) me empezó a llamar mucho la atención el béisbol, empecé a investigar mucho sobre este deporte, para tambien poder verlo con mi abuelo y entender que era lo que estaba pasando.</p>
+                    <p>Después de que logre entender el deporte quise empezar a ir al estadio, este año (2025) he ido muchas veces y cada vez que visito el estadio me gusta mucho mas este deporte.</p>
+                    <p>En la <abbr title="Liga Mexicana de Béisbol">LMB</abbr> apoyo a los Sultanes de Monterrey o tambien conocidos como los <small><i>Fantasmas Grises.</i></small> Otra razón por la que me gusta ir es por que han estado regalando muchas cosas de coleccion como lo son los Bobbleaheads.</p>
+                    <div class="imagenes">
+                        <img src="img/kelly.jpg" alt="Bobbleahead Roberto Kelly" width="700" height="700">
+                    </div>
+                    <p>En la <abbr title="Major League Baseball">MLB</abbr> apoyo a los Dodgers de Los Angeles, en 2024 fue cuando igualmente empecé a ver el béisbol de las Grandes Ligas y ese año fue cuando me toco ver a los Dodgers como campeones de la Serie Mundial, fue un momento muy emocionante ya que era mi primera final del béisbol de la gran carpa.</p>
+                </header>
+            </section>  
+          </article>
+    </main>
+    <nav>
+        <p>Recomiendo ver el video que se presenta a continuación para que se pueda lograr entender la emoción que se sintio.</p>
+        <div class="imagenes">
+            <ul>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/l7tPl3yVBnQ?si=VnSVKYGd2-WEcEq8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <p><small>DODGERS VS YANKEES SERIE MUNDIAL 2024 (Juego 1)</small></p>
+            </ul>
+        </div>
+    </nav>
+    <aside></aside>
+    <footer>
+        <address>&copy;Desarrollado por Luis Ernesto Guzmán García</address>
+    </footer>
 </body>
 </html>
