--- a/ernesgarcia06/pasatiemposver2/pagina3.html
+++ b/ernesgarcia06/pasatiemposver2/pagina3.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="estilos.css">
+
+    <title>Música</title>
 </head>
-<body>
+<body class="fondos">
     <a href="index.html"><span style="font-size: 30px;">⬅️</span></a>
 
     
